test/parsetest/invalid/function_calls4.java

class foo {
  public void a() {
    foo(a,);
  }
}
